fix(studio): fix breadcrumb text vertical alignment

--- a/kanecta-apps/kanecta-app-studio/src/components/shared/Breadcrumb.scss
+++ b/kanecta-apps/kanecta-app-studio/src/components/shared/Breadcrumb.scss
@@ -26,8 +26,14 @@
     padding: 0;
     color: inherit;
     font-size: inherit;
+    line-height: 1;
+    padding-top: 5px;
     display: flex;
     align-items: center;
+
+    &--icon {
+      padding-top: 0;
+    }
 
     &:hover {
       color: var(--color-primary);
